[project]
name = "cmsketch"
version = "0.1.0"
description = "High-performance Count-Min Sketch implementation with C++ and Python versions"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "isaac-fei", email = "isaac.omega.fei@gmail.com" }]
maintainers = [{ name = "isaac-fei", email = "isaac.omega.fei@gmail.com" }]
requires-python = ">=3.11"
dependencies = []
keywords = [
    "count-min-sketch",
    "probabilistic",
    "data-structure",
    "streaming",
    "big-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/isaac-fei/count-min-sketch"
Repository = "https://github.com/isaac-fei/count-min-sketch"
Documentation = "https://github.com/isaac-fei/count-min-sketch#readme"
Issues = "https://github.com/isaac-fei/count-min-sketch/issues"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

# Exclude unnecessary files from wheel for Python-only distribution
wheel.exclude = [
    "lib/**",     # Exclude static library and CMake files
    "include/**", # Exclude header files (not needed for Python users)
]

# CMake build settings
[tool.scikit-build.cmake]
args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DCMAKE_CXX_STANDARD=23",
    "-DCMAKE_CXX_STANDARD_REQUIRED=ON",
    "-DCMAKE_CXX_EXTENSIONS=OFF",
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.pytest.ini_options]
testpaths = ["pytests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "--disable-warnings"]

[dependency-groups]
dev = [
    "faker>=37.6.0",
    "ipykernel>=6.30.1",
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "build>=1.0.0",
    "twine>=6.2.0",
]
